trunk/Archive2/6f/e406932d289c36/output
main.cpp: In function ‘int main()’:
main.cpp:21:7: error: expected primary-expression before ‘;’ token
     --;
       ^
main.cpp:24:7: error: expected primary-expression before ‘;’ token
     --;
       ^
main.cpp:27:7: error: expected primary-expression before ‘;’ token
     --;
       ^
